sample/error/e02811.asn
E02811 DEFINITIONS ::=
BEGIN
    cho CHOICE {        -- E02811
        a   INTEGER,
        b   NULL,
        c   BIT STRING
    } ::= item : 100
END
